# AdzeKit

./: .gitignore  README.md  inbox.md  pyproject.toml
assets/: reference.docx
backbone-spec/: schema.md
daily/: 2026-02-23.md
docs/: concepts.md  design.md  philosophy.md  roadmap.md
drafts/: email-patterns.md  inbox-zero-2026-03-30-1430.md
examples/minimal-vault/: inbox.md
examples/minimal-vault/daily/: 2026-02-16.md
examples/minimal-vault/knowledge/: example-note.md
examples/minimal-vault/loops/: open.md
examples/minimal-vault/projects/active/: example-project.md
examples/minimal-vault/reviews/: 2026-W08.md
knowledge/: example-note.md
loops/: open.md
projects/active/: example-project.md
reviews/: 2026-W09.md
src/adzekit/: __init__.py  cli.py  config.py  models.py  parser.py  preprocessor.py  workspace.py
src/adzekit/agent/: __init__.py  client.py  gmail_tools.py  isaac_client.py  orchestrator.py  shed_tools.py  tools.py
src/adzekit/mcp/: backbone_server.py  gmail_server.py
src/adzekit/modules/: __init__.py  automate.py  bench.py  daily.py  drafts.py  export.py  git_age.py  graph.py  graph_dedup.py  loops.py  poc.py  tags.py  wip.py
src/adzekit/services/: __init__.py  gmail.py
src/adzekit/skills/: asq-lookup.md  daily-start.md  graph-connect.md  graph-update.md  inbox-zero.md  loop-momentum.md  slack-digest.md  slack-knowledge.md  slack.md  weekly-review.md
src/adzekit/ui/: __init__.py  app.py
tests/: conftest.py  test_automate.py  test_bench.py  test_cli.py  test_daily.py  test_drafts.py  test_enforcement.py  test_export.py  test_git_workspace.py  test_gmail_service.py  test_graph.py  test_graph_activation.py  test_graph_dedup.py  test_loops.py  test_mcp_backbone.py  test_mcp_imports.py  test_parser.py  test_poc.py  test_preprocessor.py  test_shed_tools.py  test_tags.py  test_tools.py  test_ui.py  test_wip.py  test_workspace.py
(+9 files in other folders)
