[project]
name = "adzekit"
version = "0.1.0"
description = "A markdown-native, personal productivity workbench. Prehistoric tools. Modern brains."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
gmail = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
adzekit = "adzekit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adzekit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
